--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -482,10 +482,10 @@ function addBuildingRow(id, text) {
    <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a style="pointer-events: none;"> Welcome, {{netid}}</a>
-    <a href="https://andsylin.github.io/" target="_blank">About</a>
+    <a href="https://classmaps.herokuapp.com/about/#team" target="_blank">About</a>
     <a onclick="openHelp()">Help</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank">Feedback</a>
-    <a href="https://andsylin.github.io/members/" target="_blank">Contact</a>
+    <a href="https://classmaps.herokuapp.com/about/#team" target="_blank">Contact</a>
     <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
 
       <footer style="font-size: 12px; padding: 10px; position: absolute; bottom: 0; right: 0;">
