add bwk to team

--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -215,6 +215,13 @@
               <p class="text-muted">Advisor</p>
             </div>
           </div>
+          <div class="col-sm-4" >
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="{% static 'classes/img/team/2.jpg' %}" alt="">
+              <h4>Brian Kernighan</h4>
+              <p class="text-muted">Instructor</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
