--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -625,6 +625,12 @@ toggle between hiding and showing the dropdown content */
        iconAnchor:   [13, 13], // point of the icon which will correspond to marker's location
        popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
      });
+    var diningIcon = L.icon({
+       iconUrl: "{% static 'classes/images/dining.png' %}",
+       iconSize:     [26, 26], // size of the icon
+       iconAnchor:   [13, 13], // point of the icon which will correspond to marker's location
+       popupAnchor:  [0, 0] // point from which the popup should open relative to the iconAnchor
+     });
      var savedIcon = L.icon({
        iconUrl: "{% static 'classes/images/marker-icon-green.png' %}",
        iconAnchor:   [12, 41], // point of the icon which will correspond to marker's location
@@ -663,7 +669,7 @@ toggle between hiding and showing the dropdown content */
   
   for (var i = 0; i < dining.length; i++) {
   //if (hi[i][3] == '6' || hi[i][3] == '29')
-    L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: kitchenIcon}).bindPopup(dining[i][2]).addTo(diningspots);
+    L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon}).bindPopup(dining[i][2]).addTo(diningspots);
  }
 
     // URLS of maps for different layers (note: need to add attributes)
