--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -474,10 +474,9 @@ function addBuildingRow(id, text) {
 {% if buildings %}
     {% for b in buildings %}
       if ("{{b.names|last}}") {
-        addBuildingRow("buildings", "<a href=\"/buildings/{{b}}\" style=\"color: black;\">{{b}}<br>{{b.names|last}}");
+        addBuildingRow("buildings", "<a href=\"/buildings/{{b}}\" style=\"color: black;\">"+truncate({{b}})+"<br>"+truncate({{b.names|last}})");
       } else {
-        addBuildingRow("buildings", "<a href=\"/buildings/{{b}}\" style=\"color: black;\">{{b}} {{b.names|last}}");
-      }
+        addBuildingRow("buildings", "<a href=\"/buildings/{{b}}\" style=\"color: black;\">"+truncate({{b}})");
     {% endfor %}
 {% endif %}
 
