--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -474,10 +474,10 @@ function addBuildingRow(id, text) {
 {% if buildings %}
     {% for b in buildings %}
       if ("{{b.names|last}}") {
-        addBuildingRow("buildings", "<a href=\"/buildings/{{b}}\" style=\"color: black;\">"+truncateTitle({{b}})+"<br>"+truncateTitle({{b.names|last}})");
+        addBuildingRow("buildings", "<a href=\"/buildings/{{b}}\" style=\"color: black;\">{{b}}<br>{{b.names|last}}");
       } else {
-        addBuildingRow("buildings", "<a href=\"/buildings/{{b}}\" style=\"color: black;\">"+truncateTitle({{b}})");
-    {% endfor %}
+        addBuildingRow("buildings", "<a href=\"/buildings/{{b}}\" style=\"color: black;\">{{b}} {{b.names|last}}");
+      }
 {% endif %}
 
 {% if classes %}
