--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -692,7 +692,7 @@ mymap.locate({setView: true, maxZoom: 15});
 });*/
 
 var southWest = L.latLng(40.32, -74.67),
-northEast = L.latLng(40.356, -74.6);
+northEast = L.latLng(40.368481, -74.596444) //40.356, -74.6);
 var bounds = L.latLngBounds(southWest, northEast);
 
 map.setMaxBounds(bounds);
