--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -31,7 +31,7 @@
 
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js" type="text/javascript"></script>
 
 
@@ -424,7 +424,7 @@ function convertBool(b) {
 <div style="float: right; padding-right: 5px; position: fixed; top: 60px; right: 0;">
      <a href="javascript:void(0)" class="closebtn" onclick="closeResults()">&times;CLOSE</a>
 </div>
-  
+
   <div id="resultsOverlay" class="resultsOverlay" style="overflow: auto;">
     <div class="container match-group" style="margin: 0;">
       <div id="buildings" class="row text-center" style="margin: 0;">
@@ -665,7 +665,7 @@ toggle between hiding and showing the dropdown content */
   //if (hi[i][3] == '6' || hi[i][3] == '29')
     L.marker([kitchens[i][0], kitchens[i][1]], {title: kitchens[i][2], icon: kitchenIcon}).bindPopup(kitchens[i][2]).addTo(kitchenspots);
  }
-  
+
   for (var i = 0; i < dining.length; i++) {
   //if (hi[i][3] == '6' || hi[i][3] == '29')
     L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon}).bindPopup(dining[i][2]).addTo(diningspots);
@@ -824,14 +824,18 @@ function resetHighlight(e) {
 
     getData().success(function (data) {
       geojson.eachLayer(function(layer) {
-        var val = data[layer.feature.properties.name];
-        var color = val > 5000 ? '#800026' :
-          val > 2500  ? '#BD0026' :
-          val > 1000  ? '#E31A1C' :
-          val > 500  ? '#FC4E2A' :
-          val > 100   ? '#FD8D3C' :
-          val > 50   ? '#FEB24C' :
-          val > 0   ? '#FED976' :
+        var tokens = layer.feature.properties.name.split(",");
+        var totalEnroll = 0;
+        for (i = 0; i < tokens.length; i++) {
+          totalEnroll += data[tokens[i]];
+        }
+        var color = totalEnroll > 5000 ? '#800026' :
+          totalEnroll > 2500  ? '#BD0026' :
+          totalEnroll > 1000  ? '#E31A1C' :
+          totalEnroll > 500  ? '#FC4E2A' :
+          totalEnroll > 100   ? '#FD8D3C' :
+          totalEnroll > 50   ? '#FEB24C' :
+          totalEnroll > 0   ? '#FED976' :
                 '#FFF';
 
         layer.setStyle({
