--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -415,6 +415,7 @@ function convertBool(b) {
 <!--  Code search result overlay -->
 <div id="resultsContainer" class="resultsContainer" style="display: none;">
   <div id="resultsOverlay" class="resultsOverlay" style="overflow: auto;">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeResults()">&times;CLOSE</a>
     <div class="container match-group" style="margin: 0;">
       <div id="buildings" class="row text-center" style="margin: 0;">
       </div>
