--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -275,12 +275,12 @@
 
 <!-- Autocomplete js -->
 <script>
-  function selectClass(){
-  window.location.href = 'https://classmaps.herokuapp.com/courses/{{c.pk}}';
-}
-function selectBuilding(){
-  window.location.href = 'https://classmaps.herokuapp.com/buildings/{{b}}';
-}
+//   function selectClass(){
+//   window.location.href = 'https://classmaps.herokuapp.com/courses/{{c.pk}}';
+// }
+// function selectBuilding(){
+//   window.location.href = 'https://classmaps.herokuapp.com/buildings/{{b}}';
+// }
 
 $(function() {
   $("#search").autocomplete({
