--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -383,6 +383,12 @@ function convertBool(b) {
       </button>
     </div>
   </form>
+    
+  <script>
+  function submit() {
+      document.getElementById("myform").submit();
+  }
+  </script>
 
 
   <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
