--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -402,7 +402,12 @@ function convertBool(b) {
    <table id="myTable" class="table order-list">
    <thead>
        <tr>
-           <td><div class="listTitle"><i class="fa fa-star"></i>Favorites</div></td>
+           <td>
+             <div class="listTitle"><i class="fa fa-star"></i>Favorites</div>
+             <div style="float: right; padding-right: 5px;">
+               <a href="javascript:void(0)" class="closebtn" onclick="closeFavorites()">&times;CLOSE</a>
+             </div>
+         </td>
        </tr>
    </thead>
    <tfoot>
