--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -384,6 +384,13 @@ function convertBool(b) {
     </div>
   </form>
 
+  <script>
+  function submit() {
+      document.getElementById("myform").submit();
+  }
+  </script>
+
+
   <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
       </div>
@@ -396,9 +403,9 @@ function convertBool(b) {
    <thead>
        <tr>
            <td>
-             <div class="listTitle"><i class="fa fa-star"></i>Favorites</div>
-             <div style="float: right; padding-right: 5px;">
-               <a href="javascript:void(0)" class="closebtn" onclick="closeFavorites()">&times;CLOSE</a>
+             <div class="listTitle" style="float: left;"><i class="fa fa-star"></i>Favorites</div>
+             <div style="float: right;">
+               <a href="javascript:void(0)" class="closebtn" onclick="closeFavorites()">&times;</a>
              </div>
          </td>
        </tr>
