--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -404,10 +404,10 @@ function convertBool(b) {
        <tr>
            <td>
              <div class="listTitle" style="float: left;"><i class="fa fa-star"></i>Favorites</div>
-             <div style="float: right;">
-               <a href="javascript:void(0)" class="closebtn" onclick="closeFavorites()">&times;</a>
-             </div>
          </td>
+         <div style="float: right;">
+               <a href="javascript:void(0)" style="font-size: large; color: white" class="closebtn" onclick="closeFavorites()">&times;</a>
+         </div>
        </tr>
    </thead>
    <tfoot>
