--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -378,17 +378,9 @@ function convertBool(b) {
    </div>
 
     <div style="float:left; padding-right: 10px;">
-      <button type="submit" style="display:none">
-        <i class="fa fa-search"></i>Search ClassMaps
-      </button>
+      <input type="submit">
     </div>
   </form>
-
-  <script>
-  function submit() {
-      document.getElementById("myform").submit();
-  }
-  </script>
 
 
   <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
