--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -378,7 +378,7 @@ function convertBool(b) {
    </div>
 
     <div style="float:left; padding-right: 10px;">
-      <input type="submit">
+      <input type="submit" style="display:none">
     </div>
   </form>
 
