--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -378,7 +378,9 @@ function convertBool(b) {
    </div>
 
     <div style="float:left; padding-right: 10px;">
-      <input type="submit" style="display:none">
+      <button type="submit" style="display:none">
+        <i class="fa fa-search"></i>Search ClassMaps  
+      </button>
     </div>
   </form>
 
