--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -400,7 +400,7 @@ function convertBool(b) {
              <div class="listTitle" style="float: left;"><i class="fa fa-star"></i>Favorites</div>
          </td>
          <div style="float: right;">
-           <a href="javascript:void(0)" style="color: white" class="closebtn" onclick="closeFavorites()">&times;hide</a>
+           <a href="javascript:void(0)" style="color: white" class="closebtn" onclick="closeFavorites()">&times;</a>
          </div>
        </tr>
    </thead>
