--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -373,8 +373,8 @@ function convertBool(b) {
       </div>
     </div>
 
-   <div style="width:25px; float:left; padding-right: 10px;" onclick="clearForm()">
-    <input type="text" style="color: white; cursor: pointer;" placeholder="&times;" readonly>
+   <div style="width:25px; float:left; margin-right: 5px;" onclick="clearForm()">
+    <input type="text" style="color: white; cursor: pointer; font-size:15px;" placeholder="&times;" readonly>
    </div>
 
     <div style="float:left; padding-right: 10px;">
