--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -492,7 +492,7 @@ function addBuildingRow(id, text) {
         <p>To add the site to your phone's homescreen, open the <a style="padding: 0; font-size: 12px; color: #00aaee;" href="/">homepage</a></p>
         <p>On iPhone, click the <img height="24" src="{% static 'classes/images/action.png' %}"> button on the bottom of Safari</p>
         <p>On Android, click on the <img src="{% static 'classes/images/3dot.png' %}"/> button on the top right of Chrome</p>
-        <p>Click "Add to Home Screen" <img src="{% static 'classes/images/icons/24x24.png' %}"/></p>
+        <p>Click "Add to Home Screen" <img src="{% static 'classes/images/icons/24x24.png' %}"/> ClassMaps</p>
       </footer>
   </div>
 
