--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -706,7 +706,7 @@ map.on('drag', function() {
       "&nbspWater": waterspots,
       "&nbspKitchens": kitchenspots,
       "&nbspDining": diningspots,
-      "&nbspBuildings": buildings
+      "&nbspHeatmap": buildings
     };
     // Adds overlays and layers to map
     L.control.layers(baseLayers, overlays, {position: 'bottomright', collapsed: collapse}).addTo(map);
