--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -454,7 +454,7 @@ function addBuildingRow(id, text) {
 {% if buildings or classes %}
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
-  addBuildingRow("buildings", "<a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
+  addBuildingRow("buildings", "Results:<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
 {% endif %}
 
 {% if buildings %}
