--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -452,7 +452,7 @@ function addCourseRow(id, text) {
 }
 function addBuildingRow(id, text) {
 //   $("#"+id).append("<div class=\"col-xs-4\">"+text+"</div>");
-  $("#"+id).append("<div style=\"background-color: #d3d3de; padding-top: 40px;padding-bottom: 40px;\" class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+  $("#"+id).append("<div style=\"background-color: #d3d3d3; padding-top: 50px;\" class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 
