--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -452,7 +452,7 @@ function addBuildingRow(id, text) {
 {% if buildings or classes %}
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
-  addCourseRow("buildings", "Results for:<br>\"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
+  addCourseRow("buildings", "Results for:<br>\"{{q}}\"{{d}}{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
 {% endif %}
 
 {% if buildings %}
