try to make cards same height

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -445,7 +445,7 @@ function addCourseRow(id, text) {
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 function addBuildingRow(id, text) {
-  $("#"+id).append("<div \" class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+  $("#"+id).append("<div \" style=\"padding-top: auto;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 
