--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -445,14 +445,14 @@ function addCourseRow(id, text) {
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 function addBuildingRow(id, text) {
-  $("#"+id).append("<div \" style=\"padding-top: auto;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
+  $("#"+id).append("<div \" style=\"padding-top: auto; padding-bottom: auto;\"class=\"card\" onclick=\"selectBuilding()\">"+"<div class=\"container\">"+
     "<p>"+text+"</p>"+"</div>"+"</div>");
 }
 
 {% if buildings or classes %}
   var matchesBlock = document.getElementById("resultsContainer");
   matchesBlock.style.display = "block";
-  addCourseRow("buildings", "Results for: \"{{q}}\"<br>{{d}}{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
+  addCourseRow("buildings", "Results for: \"{{q}}\"<br>{{d}}<br>{{t}}<br><a href=\"javascript:void(0)\" class=\"closebtn\" onclick=\"closeResults()\">&times;CLOSE</a>");
 {% endif %}
 
 {% if buildings %}
