--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -920,7 +920,8 @@ var offset = 0.0001;
    {% for s in saved_buildings %}
      var key = "{{s.lon}} {{s.lat}}"
      var button =
-     "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
+     "<form method=\"post\" action=\"{% url 'classes:index' %}\">" +
+     "{% csrf_token %}" +
          "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}b\" type=\"submit\">" +
              "<i class=\"fa fa-close\">"+"</i>"+"Remove" +
          "</button>" +
@@ -931,14 +932,15 @@ var offset = 0.0001;
      } else {
        lonlats[key] = text;
      }
-     addRow("{{s.names.0}}", button);
+     addRow("{{s.names}}".split("/")[0], button);
   {% endfor %}
 {% endif %}
 {% if saved_courses %}
    {% for s in saved_courses %}
      var key = "{{s.building_lon}} {{s.building_lat}}";
      var button =
-     "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
+     "<form method=\"post\" action=\"{% url 'classes:index' %}\">" +
+     "{% csrf_token %}" +
          "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
              "<i class=\"fa fa-close\">"+"</i>"+"Remove" +
          "</button>" +
@@ -997,7 +999,8 @@ if (!jQuery.isEmptyObject(lonlats)) {
     {% endif %}
     {% if building or c %}
       var search = "<div>" + name + "</div>" +
-      "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
+      "<form method=\"post\" action=\"{% url 'classes:index' %}\">" +
+          "{% csrf_token %}" +
           "<button id=\"addrow\" class=\"btn btn-success\" name=\"s\" value=\""+id+type+"\" type=\"submit\">" +
               "<i class=\"fa fa-star\">"+"</i>"+"Favorite" +
           "</button>" +
