--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -924,8 +924,7 @@ var offset = 0.0001;
    {% for s in saved_buildings %}
      var key = "{{s.lon}} {{s.lat}}"
      var button =
-     "<form method=\"post\" action=\"{% url 'classes:index' %}\">" +
-     "{% csrf_token %}" +
+     "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
          "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}b\" type=\"submit\">" +
              "<i class=\"fa fa-close\">"+"</i>"+"Remove" +
          "</button>" +
@@ -943,8 +942,7 @@ var offset = 0.0001;
    {% for s in saved_courses %}
      var key = "{{s.building_lon}} {{s.building_lat}}";
      var button =
-     "<form method=\"post\" action=\"{% url 'classes:index' %}\">" +
-     "{% csrf_token %}" +
+     "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
          "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
              "<i class=\"fa fa-close\">"+"</i>"+"Remove" +
          "</button>" +
@@ -1003,8 +1001,7 @@ if (!jQuery.isEmptyObject(lonlats)) {
     {% endif %}
     {% if building or c %}
       var search = "<div>" + name + "</div>" +
-      "<form method=\"post\" action=\"{% url 'classes:index' %}\">" +
-          "{% csrf_token %}" +
+      "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +
           "<button id=\"addrow\" class=\"btn btn-success\" name=\"s\" value=\""+id+type+"\" type=\"submit\">" +
               "<i class=\"fa fa-star\">"+"</i>"+"Favorite" +
           "</button>" +
