--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -79,8 +79,8 @@
     .overlay {
       height: auto;
       width: 100%;
-      min-height: 65px;
-      max-height: 85px;
+      height: 65px;
+/*       max-height: 85px; */
       margin-left: -100%;
       position: relative;
       float: right;
