--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -685,7 +685,7 @@ toggle between hiding and showing the dropdown content */
 mymap.locate({setView: true, maxZoom: 15});
 });*/
 
-var southWest = L.latLng(40.32, -74.67),
+var southWest = L.latLng(40.323212, -74.718103), //40.32, -74.67),
 northEast = L.latLng(40.368481, -74.596444) //40.356, -74.6);
 var bounds = L.latLngBounds(southWest, northEast);
 
