--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -181,6 +181,10 @@
         font-size: 34px;
         margin-left: 50px;
     }
+    /*  Hover over inputs  */
+    .overlay input:hover{
+      color: white;
+    }
     /* Start saved list css */
     .listOverlay {
       margin: 10px;
