--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -448,7 +448,7 @@ function dateCheck(){
   console.log(t);
   console.log(w);
   if(m || t || w || th || f){
-    document.getElementById("dropdownMenuButton")[0].placeholder="selected";
+    document.getElementById("dropdownMenuButton").placeholder="selected";
     console.log("got here");
   }
 }
