--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -459,6 +459,9 @@ function dateCheck(){
     console.log(output);
     document.getElementById("dropdownMenuButton").placeholder=output;
   }
+  else{
+    document.getElementById("dropdownMenuButton").placeholder="Date";
+  }
 }
 function truncate(line, maxLength) {
   if (line.length <= maxLength) {
