clear form clears date stuff

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -377,7 +377,7 @@ function convertBool(b) {
       </div>
     </div>
 
-   <div style="width:25px; float:left; margin-right: 5px;" onclick="clearForm()">
+   <div style="width:25px; float:left; margin-right: 5px;" onclick="clearForm();dateCheck();">
     <input type="text" style="color: white; cursor: pointer; font-size:15px;" placeholder="&times;" readonly>
    </div>
 
