--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -340,13 +340,13 @@ function convertBool(b) {
     <div style="width:10px; float:left;">
       <input style="color: white;" placeholder="" readonly>
    </div>
-    <div style="width:74px; float:left;">
+    <div style="width:50px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
-        <input id="clock" type="text" class="form-control" name="t" placeholder="Set Time," style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
+        <input id="clock" type="text" class="form-control" name="t" placeholder="Time," style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
       </div>
     </div>
 
-   <div style="float:left; width:50px;">
+   <div style="float:left; width:60px;">
     <div class="dropdown" style="float:left; ">
 <!--       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <img src="{% static 'classes/images/weekicon.png'%}" alt="Day of Week" style="width:20px;">
