--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -804,6 +804,7 @@ function onEachFeature(feature, layer) {
          "</button>" +
      "</form>";
   layer.bindPopup(buildingtext);
+  layer.bindTooltip('hello');
   layer.on({
     mouseover: highlightFeature,//,
     mouseout: resetHighlight,
