--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -340,18 +340,20 @@ function convertBool(b) {
     <div style="width:10px; float:left;">
       <input style="color: white;" placeholder="" readonly>
    </div>
-    <div style="width:48px; float:left;">
+    <div style="width:55px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
-        <input id="clock" type="text" class="form-control" name="t" placeholder="Time |" style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
+        <input id="clock" type="text" class="form-control" name="t" placeholder="Time" style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
       </div>
     </div>
-
-   <div style="float:left; width:60px;">
-    <div class="dropdown" style="float:left; ">
+   <div style="width:5px; float:left;">
+    <input type="text" style="color: white; cursor: pointer; font-size:15px;" placeholder="|" readonly>
+   </div>
+   <div style="float:left; width:55px;">
+    <div class="dropdown" style="float:left;">
 <!--       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <img src="{% static 'classes/images/weekicon.png'%}" alt="Day of Week" style="width:20px;">
       </button> -->
-      <input id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="text" class="form-control" placeholder="Date" style="color: white; cursor: pointer;" readonly>
+      <input id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="text" class="form-control" placeholder=" Date" style="color: white; cursor: pointer;" readonly>
     <div id="dropdown-menu" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <label class="switch">
           <input id = "M" name = "M" value = "M" type="checkbox" onclick="dateCheck()">
