--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -107,12 +107,15 @@
     }
     ::placeholder {
       color: #d3d3d3;
+      font-size: 12px;
       opacity: 1; /* Firefox */
     }
     :-ms-input-placeholder { /* Internet Explorer 10-11 */
+       font-size: 12px;
        color: #d3d3d3;
     }
     ::-ms-input-placeholder { /* Microsoft Edge */
+       font-size: 12px;
        color: #d3d3d3;
     }
     input, select, textarea {
